fix overflow when columns stack

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -8,7 +8,7 @@ body {
     background-color: $dark-blue;
     color: $text-white;
     margin: 0;
-    padding: 0;
+    padding: 20px;
 }
 
 h1, h2, h3, h4, h5, h6, p {
